# uvenv

./: README.md  pyproject.toml
.github/workflows/: ci.yml
_reference/: uvenv_design_conversation.md
docs/: design.md  index.md  principles.md  roadmap.md
src/uvenv/: __init__.py  cli.py
src/uvenv/core/: __init__.py  freeze.py  manager.py  paths.py  python.py  utils.py
src/uvenv/shell/: __init__.py  activate.py  completion.py
tests/: __init__.py  test_cli.py  test_manager.py  test_python.py
