[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvenv"
version = "0.1.0"
description = "A CLI tool for managing Python virtual environments using uv"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["typer>=0.9.0", "rich>=13.0.0", "toml>=0.10.2"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
uvenv = "uvenv.cli:main"

[project.urls]
Homepage = "https://github.com/mgale694/uvenv"
Repository = "https://github.com/mgale694/uvenv"
Issues = "https://github.com/mgale694/uvenv/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/uvenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=uvenv --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "B", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
